--- a/lesson11/fishhaven/fishhaven.html
+++ b/lesson11/fishhaven/fishhaven.html
@@ -85,6 +85,10 @@
 
         </section>
 
+        <div class="events">
+            <h3>Upcoming Events:</h3>
+        </div>
+
         <section>
             <h3>Little Fish Haven, Idaho, is paradise for residents</h3>
             <p class="author"><em>Written by: Kurt Friedemann Idaho State Journal</em></p>
