--- a/lesson11/home/index.html
+++ b/lesson11/home/index.html
@@ -18,7 +18,7 @@
 <body>
     <div id="banner">
         <p>Saturday- Preston Pancakes in the Park! 9:00 am Friday at the city park</p>
-      </div>
+    </div>
 
     <header>
         <img src="./images/icon.png" alt="Roadway Weather Channel logo">
@@ -42,33 +42,59 @@
 
     <main>
         <h2>Home Page</h2>
-        <div class="herostats">
+        <div>
             <picture>
                 <source srcset="images/heroimgmedium.jpg" media="(min-width: 37.5em) and (max-width: 50em)">
-                <source srcset="images/heroimglarge.jpg" media="(min-width: 50em)">
+                <source srcset="images/heroimglargee.jpg" media="(min-width: 50em)">
                 <img class="heroimg" src="./images/heroimgsmall.jpg" alt="hero img">
             </picture>
         </div>
- 
-        <section>
 
+        <div class="box"></div>
+
+        <section>
+            <h3>Hatch and Kendall retire</h3>
+            <p class="author"><em>Written by: Kyle Henderson</em></p>
+            <img class="cars" src="images/classroom.jpg" alt="teaching supplies">
+
+            <p class="article-text">
+                The June school board meeting for the West Side School District ended with a heartfelt thanks to two
+                long-term staff who have decided to start enjoying their retirement. <br>
+
+                Allen Hatch began working for West Side in 2004 as the district’s Transportation Supervisor. The safe
+                transportation of the students at West Side has always been his primary focus. The board took this
+                opportunity to thank him for keeping all the buses in good working order with regular maintenance,
+                determining a bus routes safety during winter weather, and so much more.<br>
+
+                Marcia Kendall has worked for West Side School District since 1988. Starting as a cook she worked her
+                way up to Food Services Director. She has ensured delicious and nutritious meals to the students and
+                staff. Over her more than 30 year time at west side she has maintained a great nutrition policy for the
+                students of West Side, kept two separate kitchens running smoothly, kept her department “in the black”
+                and the facilities in good repair.<br>
+
+                There were many tears, from both the board and the retirees, when the school board handed them their
+                plaque to commemorate their years of exemplary service.<br>
+                Read more at <a href="https://www.hjnews.com/preston/hatch-kendall-retire/article_d66b24ea-5352-5a3d-8a2e-468fc7a89d0e.html">hjnews.com</a>
+            </p>
 
 
         </section>
-
 
         <section class="contact-section">
             <img class="map" src="images/prestongooglemap.JPG" alt="Google Maps of Preston Idaho">
             <h5>Contact Information</h5>
             <div class="contact-text">
-            <p>6516 State St Preston Idaho 83263</p>
-            <p >+1 (208) 569 5214</p>
-            <p >helpcenter@roadwayweatherchannel.com</p>
+                <p>6516 State St Preston Idaho 83263</p>
+                <p>+1 (208) 569 5214</p>
+                <p>helpcenter@roadwayweatherchannel.com</p>
 
-            <a href="https://www.facebook.com/" target="_blank"><img class="social" src="images/facebook-square.png" alt="facebook icon"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img class="social" src="images/black-instagram.png" alt="instagram icon"></a>
-            <a href="https://twitter.com/" target="_blank"><img class="social" src="images/twitter-square.png" alt="twitter icon"></a>
-        </div>
+                <a href="https://www.facebook.com/" target="_blank"><img class="social" src="images/facebook-square.png"
+                        alt="facebook icon"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img class="social"
+                        src="images/black-instagram.png" alt="instagram icon"></a>
+                <a href="https://twitter.com/" target="_blank"><img class="social" src="images/twitter-square.png"
+                        alt="twitter icon"></a>
+            </div>
         </section>
 
     </main>
@@ -85,7 +111,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="./javascript/scripts.js"></script>
     <script src="./javascript/fontload.js"></script>
-    <script src="./javascript/windchill.js"></script>
 </body>
 
 </html>
