--- a/lesson11/preston/preston-10.html
+++ b/lesson11/preston/preston-10.html
@@ -85,6 +85,10 @@
 
         </section>
 
+        <div class="events">
+            <h3>Upcoming Events:</h3>
+        </div>
+
         <section>
             <h3>Idaho Days Returns In Grand Fashion</h3>
             <p class="author"><em>Written by: Patsy Shipley</em></p>
