--- a/lesson11/sodasprings/sodasprings.html
+++ b/lesson11/sodasprings/sodasprings.html
@@ -85,6 +85,10 @@
 
         </section>
 
+        <div class="events">
+            <h3>Upcoming Events:</h3>
+        </div>
+
         <section>
             <h3>Attempted traffic stop at Soda Springs leads to high speed chase</h3>
             <p class="author"><em>Written by: Author Name</em></p>
