--- a/lesson7/lesson-7/gallery-7.html
+++ b/lesson7/lesson-7/gallery-7.html
@@ -60,19 +60,19 @@
                 <figcaption>High wind speeds</figcaption>
             </picture>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/rain.JPG' alt='raining'>
+                <img src='./images/placeholder.JPG' data-src='./images/rain.jpg' alt='raining'>
                 <figcaption>Monsoon rain storm</figcaption>
             </picture>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/frost.JPG' alt='frosted over leaf'>
+                <img src='./images/placeholder.JPG' data-src='./images/frost.jpg' alt='frosted over leaf'>
                 <figcaption>Frosty Fall morning</figcaption>
             </picture>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/rainbow.JPG' alt='rainbow'>
+                <img src='./images/placeholder.JPG' data-src='./images/rainbow.jpg' alt='rainbow'>
                 <figcaption>Rainbow over country side</figcaption>
             </picture>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/tornado.JPG' alt='tornado'>
+                <img src='./images/placeholder.JPG' data-src='./images/tornado.jpg' alt='tornado'>
                 <figcaption>Tornado over country side</figcaption>
             </picture>
             
