--- a/lesson11/gallery/gallery-7.html
+++ b/lesson11/gallery/gallery-7.html
@@ -40,39 +40,39 @@
         <h2>Weather Gallery</h2>
         <section class='gallery'>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/green.JPG' alt='grove of trees'>
+                <img src='./images/placeholder.JPG' data-src='./images/green.jpg' alt='grove of trees'>
                 <figcaption>Sunny grove of trees</figcaption>
             </picture>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/fog.JPG' alt='foggy mountian with hillside'>
+                <img src='./images/placeholder.JPG' data-src='./images/fog.jpg' alt='foggy mountian with hillside'>
                 <figcaption>Foggy mountain side</figcaption>
             </picture>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/light.JPG' alt='lightning storm'>
+                <img src='./images/placeholder.JPG' data-src='./images/light.jpg' alt='lightning storm'>
                 <figcaption>Lightning storm overhead</figcaption>
             </picture>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/snow.JPG' alt='white snow on trees'>
+                <img src='./images/placeholder.JPG' data-src='./images/snow.jpg' alt='white snow on trees'>
                 <figcaption>Snow covered orchard</figcaption>
             </picture>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/wind.JPG' alt='American flag blowing in wind'>
+                <img src='./images/placeholder.JPG' data-src='./images/wind.jpg' alt='American flag blowing in wind'>
                 <figcaption>High wind speeds</figcaption>
             </picture>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/rain.JPG' alt='raining'>
+                <img src='./images/placeholder.JPG' data-src='./images/rain.jpg' alt='raining'>
                 <figcaption>Monsoon rain storm</figcaption>
             </picture>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/frost.JPG' alt='frosted over leaf'>
+                <img src='./images/placeholder.JPG' data-src='./images/frost.jpg' alt='frosted over leaf'>
                 <figcaption>Frosty Fall morning</figcaption>
             </picture>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/rainbow.JPG' alt='rainbow'>
+                <img src='./images/placeholder.JPG' data-src='./images/rainbow.jpg' alt='rainbow'>
                 <figcaption>Rainbow over country side</figcaption>
             </picture>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/tornado.JPG' alt='tornado'>
+                <img src='./images/placeholder.JPG' data-src='./images/tornado.jpg' alt='tornado'>
                 <figcaption>Tornado over country side</figcaption>
             </picture>
             
