--- a/lesson11/stormcenter/storm-center.html
+++ b/lesson11/stormcenter/storm-center.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roadway Weather Channel Form</title>
     <meta name="description" content="Fill out form on Roadway Weather Channel">
-
+    <link rel="icon" type="image/png" href="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
