--- a/lesson11/fishhaven/fishhaven.html
+++ b/lesson11/fishhaven/fishhaven.html
@@ -20,7 +20,7 @@
     </div>
 
     <header>
-        <img src="./images/icon.png" alt="Roadway Weather Channel logo">
+        <a href='../home/index.html'><img src="./images/icon.png" alt="Roadway Weather Channel logo"></a>
         <section class="headings">
             <h1>Roadway Weather Channel</h1>
             <div class="subtitle">Safer Travels Ahead</div>
