--- a/lesson11/stormcenter/thanks.html
+++ b/lesson11/stormcenter/thanks.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roadway Weather Channel Form</title>
     <meta name="description" content="Fill out form on Roadway Weather Channel">
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="icon" type="image/png" href="images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./css/small.css">
@@ -17,7 +16,7 @@
 
 <body>
     <header>
-        <img src="./images/icon.png" alt="Roadway Weather Channel logo">
+        <a href='../home/index.html'><img src="./images/icon.png" alt="Roadway Weather Channel logo"></a>
         <section class="headings">
             <h1>Roadway Weather Channel</h1>
             <div class="subtitle">Safer Travels Ahead</div>
