--- a/lesson12/directory/directory.html
+++ b/lesson12/directory/directory.html
@@ -48,7 +48,7 @@
             <p>BUSINESS DIRECTORY</p>
         </di>
 
-            <div class="cards"></div>
+        <div class="bus-cards"></div>
 
     </main>
 
