--- a/lesson12/contact/contact.html
+++ b/lesson12/contact/contact.html
@@ -73,12 +73,14 @@
                 <label>Email:<br>
                     <input type="email" name="email" required placeholder="youremail@email.com"></label><br>
                 <label>Phone:<br>
-                    <input type="text" name="phone" placeholder="###-###-####">
+                    <input type="text" name="phone" required placeholder="###-###-####">
                 </label><br>
                 <label>Message<br>
-                    <input type="text" name="comment" required>
-                </label><br>
+                    <textarea id="busdes" name="busdes" rows="5" cols="35" required ></textarea>
+                </label><br><br>
+                <input type="submit" value="Send Message">
             </fieldset>
+        </form>
 
         <div>
             <h4>Board of Directors</h4>
