--- a/lesson12/home/index.html
+++ b/lesson12/home/index.html
@@ -98,7 +98,7 @@
 
         <section>
             <h3>Business Highlights</h3>
-            <div id='business-card'></div>
+            <div class="bus-cards"></div>
         </section>
 
     </main>
