--- a/lesson12/join/join.html
+++ b/lesson12/join/join.html
@@ -73,7 +73,7 @@
                     <input type="text" name="websiteURL">
                 </label><br>
                 <label>Business Description<br>
-                    <input type="text" name="busdes">
+                    <textarea id="busdes" name="busdes" rows="5" cols="35"></textarea>
                 </label><br>
             </fieldset>
             <h3>Membership</h3>
@@ -88,28 +88,7 @@
                     <option value="Gold ($1000)">
                 </datalist>
             </fieldset>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            <label><br><input type="submit" value="Send Application"></label>
         </form>
 
     </main>
