--- a/lesson12/provo/provo.html
+++ b/lesson12/provo/provo.html
@@ -57,7 +57,8 @@
 
         <section>
             <h3>Demographics</h3>
-            <div id='demographics'></div> <!--do upcoming events and demographics like the home page-->
+            <div id='demographics'></div>
+            <!--do upcoming events and demographics like the home page-->
         </section>
 
         <section>
@@ -72,6 +73,10 @@
             <img src='./images/valley.jpg' alt='aerial view of provo'>
             <img src='./images/provotemple.jpg' alt='Provo City Center temple'>
             <img src='./images/kissingpoint.jpg' alt='famous kissing point in provo center street'>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/psR4vquBPfk"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </section>
         <!--4 images here of the city and a video on youtube: https://www.youtube.com/watch?v=psR4vquBPfk-->
 
