--- a/lesson12/provo/provo.html
+++ b/lesson12/provo/provo.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>#</title>
-    <meta name="description" content="#">
-    <link rel="icon" type="image/png" href="#">
-    <link href="#" rel="stylesheet">
+    <title>History of Provo Utah</title>
+    <meta name="description" content="Provo City Page for the Provo Chamber of Commerce ">
+    <link rel="icon" type="image/png" href="./images/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./css/small.css">
     <link rel="stylesheet" href="./css/medium.css">
@@ -17,24 +17,23 @@
 <body>
 
     <header>
-        <a href=''><img src="" alt=""></a>
+        <a href='./index.html'><img src="./images/mountain-1849091_640.png" alt="Mountian Icon"></a>
         <section class="headings">
-            <h1>The Wonderful City of Provo</h1>
+            <h1>The Provo Chamber of Commerce</h1>
         </section>
+
     </header>
 
     <nav class="clearfix navigation">
         <button onclick="toggleMenu()">&#9776;</button>
-        <li><a href="../join/join.html">Join</a></li>
-        <li class="active"><a href="../provo/provo.html">Provo</a></li>
-        <li><a href="../home/index.html">Home</a></li>
-        <li><a href="../directory/directory.html">Directory</a></li>
-        <li><a href="../contact/contact.html">Contact</a></li>
+        <ul id="navMenu" class="hidden">
+            <li><a href="../join/join.html">Join</a></li>
+            <li class="active"><a href="../provo/provo.html">Provo</a></li>
+            <li><a href="../home/index.html">Home</a></li>
+            <li><a href="../directory/directory.html">Directory</a></li>
+            <li><a href="../contact/contact.html">Contact</a></li>
         </ul>
     </nav>
-
-    <div id="banner">
-    </div>
 
     <main>
         <picture>
@@ -43,46 +42,76 @@
             <img class="heroimg" src="./images/homesmallhero.jpg" alt="Provo City Center temple">
         </picture>
 
-        <di>
+    <div class='mostly-main'>
+        <div class='invite'>
             <h2>The City of Provo</h2>
-        </di>
+        </div>
 
-        <section>
-            <h3>Historical Of Provo</h3>
-            <p>*History article*
+        <section class='history'>
+            <h3>History Of Provo</h3>
+            <p>Just an hour south of Salt Lake City on Interstate 15 there is a section of the state called Utah Valley.
+                Although the Ute Indians anciently inhabited this area, today the valley is home to Provo, Utah's second
+                largest city. To the west of Provo lies Utah Lake, and to the east of the city stand a towering range of
+                mountains called the Wasatch Front. The history of Provo is an interesting page in the history of the
+                Beehive State. Visitors who come to Provo will find several historic sites. These historic sites are
+                cultural resources worthy of preservation as landmarks of the community.<br>
+                Continue reading on <a href='https://utah.com/provo/history'>utah.com</a>
             </p>
         </section>
+        <div class='gridone'>
+            <section class='demographics'>
+                <h3>Demographics</h3>
+                <ul>
+                    <li>The population density in Provo is 6843% higher than Utah</li>
+                    <li>The median age in Provo is 22% lower than Utah</li>
+                    <li>In Provo 88.55% of the population is White</li>
+                    <li>In Provo 0.50% of the population is Black</li>
+                    <li>In Provo 2.50% of the population is Asian</li>
+                </ul>
+                <p>Learn more at <a href='https://www.areavibes.com/provo-ut/demographics/'>areavibes.com</a></p>
+            </section>
 
-        <section>
-            <h3>Demographics</h3>
-            
-            <!--do upcoming events and demographics like the home page-->
-        </section>
+            <section class='upcomingevents'>
+                <h3>Upcoming Events</h3>
+                <p> <strong>BIG SUMMER BASH 2021</strong> <br>
+                    Thursday July 22-Friday July 23 <br>
+                    Provo Towne Centre <br>
+                    Provo, Utah</p>
 
-        <section>
-            <h3>Upcoming Events</h3>
+                <p><strong>PROVO PIONEER DAY EXTRAVAGANZA</strong> <br>
+                    Saturday July 24th 10am - 2pm <br>
+                    Kiwanis Park <br>
+                    Provo, Utah</p>
 
-        </section>
+                <p><strong>PIONEER DAY CELEBRATION</strong> <br>
+                    Saturday July 24th 11:00am - 9:45pm <br>
+                    The Riverwoods <br>
+                    Provo, Utah</p>
 
-        <section>
-            <img src='./images/falls.jpg' alt='waterfall in provo canyon'>
-            <img src='./images/mountview.jpg' alt='view of mountians near provo'>
-            <img src='./images/band.jpg' alt='band in provo center street'>
-            <img src='./images/valley.jpg' alt='aerial view of provo'>
-            <img src='./images/provotemple.jpg' alt='Provo City Center temple'>
-            <img src='./images/kissingpoint.jpg' alt='famous kissing point in provo center street'>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/psR4vquBPfk"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </section>
-
+            </section>
+        </div>
+        <div class='gridtwo'>
+            <section class='provoimgs'>
+                <img src='./images/falls.jpg' alt='waterfall in provo canyon'>
+                <img src='./images/mountview.jpg' alt='view of mountians near provo'>
+                <img src='./images/band.jpg' alt='band in provo center street'>
+            </section>
+            <section class='provoimgs'>
+                <img src='./images/valley.jpg' alt='aerial view of provo'>
+                <img src='./images/provotemple.jpg' alt='Provo City Center temple'>
+                <img src='./images/kissingpoint.jpg' alt='famous kissing point in provo center street'>
+            </section>
+        </div>
+    </div>
     </main>
 
     <footer>
-        <h4>Contact us!</h4>
-        <p>(801) 562 6510</p>
+        <a href='../contact/contact.html'>
+            <h4>Contact us!</h4>
+        </a>
+        <p>+1 (801) 562 6510</p>
         <p>provo@chamberofcommerce.com</p>
+        <p>Last Updated: <span id='last-modification'></span></p>
     </footer>
 
 
