--- a/lesson12/contact/contact.html
+++ b/lesson12/contact/contact.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>#</title>
-    <meta name="description" content="#">
-    <link rel="icon" type="image/png" href="#">
-    <link href="#" rel="stylesheet">
+    <title>Contact Us - Provo Chamber of Commerce</title>
+    <meta name="description" content="Contact Page for Provo Utah's Chamber of Commerce ">
+    <link rel="icon" type="image/png" href="./images/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./css/small.css">
     <link rel="stylesheet" href="./css/medium.css">
@@ -15,28 +15,25 @@
 </head>
 
 <body>
-    <div id="banner">
-    </div>
 
     <header>
-        <a href=''><img src="" alt=""></a>
+        <a href='./index.html'><img src="./images/mountain-1849091_640.png" alt="Mountian Icon"></a>
         <section class="headings">
-            <h1></h1>
+            <h1>The Provo Chamber of Commerce</h1>
         </section>
+
     </header>
 
     <nav class="clearfix navigation">
         <button onclick="toggleMenu()">&#9776;</button>
-        <li><a href="../join/join.html">Join</a></li>
-        <li><a href="../provo/provo.html">Provo</a></li>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="../directory/directory.html">Directory</a></li>
-        <li class='active'><a href="../contact/contact.html">Contact</a></li>
+        <ul id="navMenu" class="hidden">
+            <li><a href="../join/join.html">Join</a></li>
+            <li><a href="../provo/provo.html">Provo</a></li>
+            <li><a href="../home/index.html">Home</a></li>
+            <li><a href="../directory/directory.html">Directory</a></li>
+            <li class="active"><a href="../contact/contact.html">Contact</a></li>
         </ul>
     </nav>
-
-    <div id="banner">
-    </div>
 
     <main>
         <picture>
@@ -44,62 +41,67 @@
             <source srcset="./images/homelargehero.jpg" media="(min-width: 50em)">
             <img class="heroimg" src="./images/homesmallhero.jpg" alt="bread bubble">
         </picture>
+        <div class='mostly-main'>
+            <div class='invite'>
+                <h2>Contact Us!</h2>
+                <p>We would love to hear from you!</p>
+            </div>
+            <div class='gridone'>
+                <section class='contact'>
+                    <h3>Contact Information</h3>
+                    <p>+1 (801) 562 6510</p>
+                    <p>provo@chamberofcommerce.com</p>
+                </section>
 
-        <di>
-            <h3>Contact Us!</h3>
-            <p>We would love to hear from you!</p>
-        </di>
+                <section class='location'>
+                    <h3>Our Location</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1771.3640635787326!2d-111.65739173393567!3d40.269076707691944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d975398a5ac43%3A0x7a3b76e73598aba4!2sUtah%20Valley%20Chamber%20of%20Commerce!5e0!3m2!1sen!2sus!4v1626575242427!5m2!1sen!2sus"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </section>
+            </div>
+            <h3><b>Send Us A Message!</b></h3>
+            <form method="get" action="thanks.html" class="grid">
+                <fieldset>
+                    <label>Full Name:<br>
+                        <input type="text" name="fullName" required pattern="[A-Za-z ]{5,}">
+                    </label><br>
+                    <label>Email:<br>
+                        <input type="email" name="email" required placeholder="youremail@email.com"></label><br>
+                    <label>Phone:<br>
+                        <input type="text" name="phone" required placeholder="###-###-####">
+                    </label><br>
+                    <label>Message<br>
+                        <textarea id="busdes" name="busdes" rows="5" cols="35" required></textarea>
+                    </label><br><br>
+                    <input type="submit" value="Send Message" class='join-now'>
+                </fieldset>
+            </form>
 
-        <section>
-            <h4>Contact Information</h4>
-            <p>phone number</p>
-            <p>email</p>
-        </section>
-
-        <section>
-            <h4>Our Location</h4>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1771.3640635787326!2d-111.65739173393567!3d40.269076707691944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d975398a5ac43%3A0x7a3b76e73598aba4!2sUtah%20Valley%20Chamber%20of%20Commerce!5e0!3m2!1sen!2sus!4v1626575242427!5m2!1sen!2sus"
-                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            <!--Do the same thing like on the home page with the contact and location next to each other-->
-        </section>
-
-        <h3><b>Send Us A Message!</b></h3>
-        <form method="get" action="thanks.html" class="grid">
-            <fieldset>
-                <label>Full Name:<br>
-                    <input type="text" name="fullName" required pattern="[A-Za-z ]{5,}">
-                </label><br>
-                <label>Email:<br>
-                    <input type="email" name="email" required placeholder="youremail@email.com"></label><br>
-                <label>Phone:<br>
-                    <input type="text" name="phone" required placeholder="###-###-####">
-                </label><br>
-                <label>Message<br>
-                    <textarea id="busdes" name="busdes" rows="5" cols="35" required ></textarea>
-                </label><br><br>
-                <input type="submit" value="Send Message">
-            </fieldset>
-        </form>
-
-        <div>
-            <h4>Board of Directors</h4>
-            <!--List Information-->
+            <div>
+                <h4 class='directors'>Board of Directors</h4>
+                <p>Gary Herbert. Executive Chair. Former Governor.<br>
+                    Janae Moss. Chairwoman of the Board. Co-Owner. RBM Building Services.<br>
+                    Rob Behunin. Chair Elect. Director of Government Affairs. R&R Partners.<br>
+                    Chris Yadon. Past Chair. Executive Director. Younique Foundation.<br>
+                    Kirt Michaelis. Treasurer. Vice President Administration. MTECH.</p>
+                <p>Learn more at <a href='https://www.thechamber.org/board-of-directors/'>thechamber.org</a></p>
+            </div>
         </div>
-
     </main>
 
     <footer>
-        <h4>Contact us!</h4>
-        <p>(801) 562 6510</p>
+        <a href='../contact/contact.html'>
+            <h4>Contact us!</h4>
+        </a>
+        <p>+1 (801) 562 6510</p>
         <p>provo@chamberofcommerce.com</p>
+        <p>Last Updated: <span id='last-modification'></span></p>
     </footer>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="./javascript/scripts.js"></script>
-    <script src="./javascript/fontload.js"></script>
-
 
 </body>
 
