--- a/lesson12/home/index.html
+++ b/lesson12/home/index.html
@@ -132,6 +132,7 @@
         <a href='../contact/contact.html'>
             <h4>Contact us!</h4>
         </a>
+        <a href='https://openweathermap.org/'>OpenWeatherMaps</a>
         <p>+1 (801) 562 6510</p>
         <p>provo@chamberofcommerce.com</p>
         <p>Last Updated: <span id='last-modification'></span></p>
